examples/test/testpolicy17814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17814
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key32: value15
      key30: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value44
          key38: value42
      podSelector:
        matchLabels:
          key37: value19
          key36: value49
          key10: value42
